category and description displays dynamically

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -150,4 +150,13 @@
         "Marvel at the magic of Milford from every angle through large windows, spacious viewing decks, and from TV screens projecting live outdoor footage from HD cameras.
             Visit the sun deck for thos3 -degree ast views,"
     </string>
+    <string name="c_to_do_things">
+        "To do things"
+    </string>
+    <string name="c_restaurant">
+        "Restaurant"
+    </string>
+    <string name="d_boat_ride">
+        "Get ready for the thrill of a lifetime with New Zealand's world famous Shotover Jet - the ultimate jet boat experience and the only way to access the spectacular Shotover Canyons!!"
+    </string>
 </resources>
